--- a/picoCTF 2024/Cryptography/C3.md
+++ b/picoCTF 2024/Cryptography/C3.md
@@ -2,18 +2,18 @@
 # C3
 [Challenge](https://play.picoctf.org/practice/challenge/407)
 
-### Description
+## Description
 
 This is the Custom Cyclical Cipher!
 Download the ciphertext [here](https://artifacts.picoctf.net/c_titan/47/ciphertext).
 Download the encoder [here](https://artifacts.picoctf.net/c_titan/47/convert.py).
 Enclose the flag in our wrapper for submission. If the flag was "example" you would submit "picoCTF{example}".
 
-### Hints
+## Hints
 
 Modern crypto schemes don't depend on the encoder to be secret, but this one does.
 
-### Solution
+## Solution
 
 這題的加密方式就是查表加密，所以也是把查表的方式反過來，主要就是 `convert.py` 的 14-16 行。修改後如下：
 
